--- a/pullpush/users/templates/users/login.html
+++ b/pullpush/users/templates/users/login.html
@@ -32,9 +32,9 @@
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
+            <!-- <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="#">Home</a>
-            </div>
+            </div> -->
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             	{% if user.is_authenticated %}
