--- a/pullpush/users/templates/users/profile.html
+++ b/pullpush/users/templates/users/profile.html
@@ -10,54 +10,30 @@
               <img src="{{user.profile.image.url}}" alt="Image" class="shadow" />
             </div>
             <h4 class="text-center">{{ user.username }}</h4>
-
             <form method="POST" enctype="multipart/form-data">
               {% csrf_token %}
               <fieldset class="form-group">
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="col-md-6">
-                      <div id="div_id_image" class="form-group">
-                        <div>
-                          <br>
-                          <label for="id_image" class="btn btn-primary">
-                            Choose Profile
-                            <input type="file" name="image" accept="image/*" style="display: none;" id="id_image">
-                          </label>
-                        </div>
-                      </div>
+                    <div class="form-group">
+                      <label for="id_image" class="btn btn-outline-info">
+                        Choose Profile
+                        <input type="file" name="image" accept="image/*" style="display: none;" id="id_image">
+                      </label>
                     </div>
                   </div>
                 </div>
               </fieldset>
               <div class="form-group">
+                <p>
+                  
+                </p>
                 <button class="btn btn-primary" type="submit">Update</button>
               </div>
             </form>
             
+    
           </div>
-          <!-- <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-						<a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
-							<i class="fa fa-home text-center mr-1"></i> 
-							Account
-						</a>
-						<a class="nav-link" id="password-tab" data-toggle="pill" href="#password" role="tab" aria-controls="password" aria-selected="false">
-							<i class="fa fa-key text-center mr-1"></i> 
-							Password
-						</a>
-						<a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
-							<i class="fa fa-user text-center mr-1"></i> 
-							Security
-						</a>
-						<a class="nav-link" id="application-tab" data-toggle="pill" href="#application" role="tab" aria-controls="application" aria-selected="false">
-							<i class="fa fa-tv text-center mr-1"></i> 
-							Application
-						</a>
-						<a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
-							<i class="fa fa-bell text-center mr-1"></i> 
-							Notification
-						</a>
-					</div> -->
         </div>
         <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
           <div
@@ -76,13 +52,19 @@
                     
 
 <div id="div_id_username" class="form-group"> <label for="id_username" class=" requiredField">
-                Username </label> <div> <input type="text" name="username" value="mynknight" maxlength="150" class="textinput form-control" required="" id="id_username">  </div> </div> <div id="div_id_email" class="form-group"> <label for="id_email" class=" requiredField">
-                Email </label> <div> <input type="email" name="email" value="mayankchoudhary651@gmail.com" class="emailinput form-control" required="" id="id_email"> </div> </div>
-
+                Username </label> <div> <input type="text" name="username" value="{{user.username}}" maxlength="150" class="textinput form-control custom-width " required="" id="id_username"> 
+                 </div> </div> 
+                 <div id="div_id_email" class="form-group"> <label for="id_email" class=" requiredField">
+                Email </label> 
+                <div> <input type="email" name="email" value="{{user.email}}" class="emailinput form-control custom-width " required="" id="id_email"> 
+                </div> </div>
                   </div>
                 </div>
               </fieldset>
               <div class="form-group">
+                <p>
+
+                </p>
                 <button class="btn btn-primary" type="submit">Update</button>
               </div>
             </form>
