--- a/FiShare/users/templates/users/login.html
+++ b/FiShare/users/templates/users/login.html
@@ -38,11 +38,11 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             	{% if user.is_authenticated %}
-            	 <a class="nav-item nav-link" href="#">Logout</a>
-            	 <a class="nav-item nav-link" href="#">Profile</a>
+            	 <a class="{% url 'logout'%}" href="#">Logout</a>
+            	 <a class="{% url 'profile'%}" href="#">Profile</a>
             	{%else%} 
-	              <a class="nav-item nav-link" href="#">Login</a>
-	              <a class="nav-item nav-link" href="#">Register</a>
+	              <a class="{% url 'login'%}" href="#">Login</a>
+	              <a class="{% url 'register'%}" href="#">Register</a>
 	            {%endif%}  
             </div>
           </div>
@@ -78,7 +78,7 @@
               </form>
               <div class="border-top pt-3">
                   <small class="text-muted">
-                    Need An Account? <a class="ml-2" href= "#" >Sign Up</a>
+                    Need An Account? <a class="ml-2" href= "{% url 'register'%}" >Sign Up</a>
                   </small>
                 </div>   
             </div>
