--- a/FiShare/root/templates/root/all_files.html
+++ b/FiShare/root/templates/root/all_files.html
@@ -20,4 +20,12 @@
   </div>
 </article>
 
-{% endfor %} {% endblock content %}
+{% endfor %}
+
+<h2>Create Folder</h2>
+<form method="POST">
+  {% csrf_token %} {{ folderform|crispy }}
+  <button type="submit">Create</button>
+</form>
+
+{% endblock content %}
