--- a/FiShare/users/templates/users/all_users.html
+++ b/FiShare/users/templates/users/all_users.html
@@ -5,7 +5,7 @@
       <div class="media">
         <img class="account-img" src="{{user.profile.image.url}}">
         <div class="media-body">
-          <h2 class="account-heading">{{user.username}}</h2>
+          <h2 class="account-heading"> <a href="{%url 'user_repo' user.id%}"> {{user.username}} </a></h2>
           <p class="text-secondary">{{user.email}}</p>
         </div>
       </div>
