--- a/FiShare/root/templates/root/base.html
+++ b/FiShare/root/templates/root/base.html
@@ -34,12 +34,10 @@
       </a>
       <ul class="navbar-nav d-flex flex-column mt-5 w-100">
         <li class="nav-item w-100">
-          <a href="{% url 'home'%}" class="nav-link text-light pl-4">Home</a>
+          <a href="#" class="nav-link text-light pl-4">Home</a>
         </li>
         <li class="nav-item w-100">
-          <a
-            href="{% url 'user_repo' request.user.id%}"
-            class="nav-link text-light pl-4"
+          <a href="{% url 'all_files'%}" class="nav-link text-light pl-4"
             >My Files</a
           >
         </li>
