--- a/FiShare/root/static/root/home.css
+++ b/FiShare/root/static/root/home.css
@@ -109,3 +109,17 @@ body {
     color: #888;
   }
   
+
+  /* favourite button css */
+  #favorite-button {
+    background-color: blue;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  #favorite-button.clicked {
+    background-color: purple;
+  }
+  
