modifications at myfiles page

--- a/FiShare/root/templates/root/all_files.html
+++ b/FiShare/root/templates/root/all_files.html
@@ -45,7 +45,10 @@
 
 
 <h2>Create Folder</h2>
-<a href="{% url 'create_folder' %}" class="btn btn-primary">Go to Link</a>
+<a href="{% url 'create_folder' %}" class="btn btn-primary">Create</a>
+
+<h2>Upload File</h2>
+<a href="{% url 'all_files_create' %}" class="btn btn-primary">Upload</a>
 
 <!-- 
 <script>
