other users repo task completed

--- a/FiShare/root/templates/root/subfolder.html
+++ b/FiShare/root/templates/root/subfolder.html
@@ -16,11 +16,13 @@
 
     <form action="{% url 'delete_file' post.pk %}" method="POST">
       {% csrf_token %}
+      {% if requested.user == post.owner%}
       <button type="submit" class="btn btn-danger">Delete</button>
       <a href="{% url 'download_file' post.file.path %}" class="btn btn-primary"
         >Download</a
       >
       <button id="favorite-button">Favorite</button>
+      {%endif%}
     </form>
   </div>
 </article>
@@ -36,12 +38,13 @@
 </article>
 {% endfor %}
 
+{% if parent_folder.owner == request.user %}
 <h2>Create Folder</h2>
 <a href="{% url 'create_folder_in_folder' parent_folder_id%}" class="btn btn-primary">Create</a>
 
 <h2>Upload File</h2>
 <a href="{% url 'create_file_in_folder' parent_folder_id%}" class="btn btn-primary">Upload</a>
-
+{% endif %}
 <!-- 
 <script>
   // Assuming you have a button with id "favoriteButton" and a data attribute "fileId" containing the file ID
