--- a/FiShare/root/templates/root/all_files.html
+++ b/FiShare/root/templates/root/all_files.html
@@ -20,11 +20,13 @@
 
     <form action="{% url 'delete_file' post.pk %}" method="POST">
       {% csrf_token %}
+      {% if request.user == post.owner %}
       <button type="submit" class="btn btn-danger">Delete</button>
       <a href="{% url 'download_file' post.file.path %}" class="btn btn-primary"
         >Download</a
       >
     <button id="favorite-button">Favorite</button>
+    {% endif %}
     </form>
   </div>
 </article>
