--- a/FiShare/root/templates/root/home.html
+++ b/FiShare/root/templates/root/home.html
@@ -10,29 +10,30 @@
               <img src="{{user.profile.image.url}}" alt="Image" class="shadow" />
             </div>
             <h4 class="text-center">{{ user.username }}</h4>
+            <form method="POST" enctype="multipart/form-data">
+              {% csrf_token %}
+              <fieldset class="form-group">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="id_image" class="btn btn-outline-info">
+                        Choose Profile
+                        <input type="file" name="image" accept="image/*" style="display: none;" id="id_image">
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </fieldset>
+              <div class="form-group">
+                <p>
+                  
+                </p>
+                <button class="btn btn-primary" type="submit">Update</button>
+              </div>
+            </form>
+            
+    
           </div>
-          <!-- <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-						<a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
-							<i class="fa fa-home text-center mr-1"></i> 
-							Account
-						</a>
-						<a class="nav-link" id="password-tab" data-toggle="pill" href="#password" role="tab" aria-controls="password" aria-selected="false">
-							<i class="fa fa-key text-center mr-1"></i> 
-							Password
-						</a>
-						<a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
-							<i class="fa fa-user text-center mr-1"></i> 
-							Security
-						</a>
-						<a class="nav-link" id="application-tab" data-toggle="pill" href="#application" role="tab" aria-controls="application" aria-selected="false">
-							<i class="fa fa-tv text-center mr-1"></i> 
-							Application
-						</a>
-						<a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
-							<i class="fa fa-bell text-center mr-1"></i> 
-							Notification
-						</a>
-					</div> -->
         </div>
         <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
           <div
@@ -42,52 +43,37 @@
             aria-labelledby="account-tab"
           >
             <h3 class="mb-4">Account Info</h3>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label>Username</label>
-                  <input type="text" class="form-control" value="{{ user.username }}" />
+            <form method="POST" enctype="multipart/form-data">
+              <input type="hidden" name="csrfmiddlewaretoken" value="IWu97SCSsyQuSeLqNbmoNysPTNTFX1OribsLJ8T7qBnv0KQEScbKE6CikabCRBzF">
+              <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Edit Changes</legend>
+                <div class="row">
+                  <div class="col-md-6">
+                    
+
+<div id="div_id_username" class="form-group"> <label for="id_username" class=" requiredField">
+                Username </label> <div> <input type="text" name="username" value="{{user.username}}" maxlength="150" class="textinput form-control custom-width " required="" id="id_username"> 
+                 </div> </div> 
+                 <div id="div_id_email" class="form-group"> <label for="id_email" class=" requiredField">
+                Email </label> 
+                <div> <input type="email" name="email" value="{{user.email}}" class="emailinput form-control custom-width " required="" id="id_email"> 
+                </div> </div>
+                  </div>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label>Created on</label>
-                  <input type="text" class="form-control" value={{user.created_at}} />
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label>Email</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    value= {{user.email}}
-                  />
-                </div>
-              </div>
-            </div>
-            <div>
+              </fieldset>
+              <div class="form-group">
                 <p>
 
                 </p>
-              <button class="btn btn-primary">Update</button>
-              <!-- <button class="btn btn-light">Cancel</button> -->
+                <button class="btn btn-primary" type="submit">Update</button>
+              </div>
+            </form>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- <form method="POST" enctype="multipart/form-data"
-    {% csrf_token %}
-    <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Edit Changes</legend>
-      {{ u_update|crispy }} {{ p_update|crispy }}
-    </fieldset>
-    <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">Update</button>
-    </div>
-  </form> -->
+  
 </div>
 {% endblock content %}
