--- a/FiShare/root/templates/root/user_repo.html
+++ b/FiShare/root/templates/root/user_repo.html
@@ -18,6 +18,7 @@
     </h1>
     <a class="article-content">{{ post.file.name|basename}}</a>
 
+    <a href="{% url 'download_file' post.file.path %}" class="btn btn-primary">Download</a>
   </div>
 </article>
 {% endfor %}
@@ -28,6 +29,9 @@
     <h1>
       <a class="article-title" href="{% url 'subfolder' post.id %}">{{post.name}}</a>
     </h1>
+    <a href="{% url 'download_folder' post.id %}" class="btn btn-primary"
+    >Download</a>
+
   </div>
 </article>
 {% endfor %}
