--- a/FiShare/root/templates/root/all_files.html
+++ b/FiShare/root/templates/root/all_files.html
@@ -39,11 +39,12 @@
     </h1>
     <a href="{% url 'download_folder' post.id %}" class="btn btn-primary"
     >Download</a>
-
-    <form action="{% url 'delete_file' post.pk %}" method="POST">
-      {% csrf_token %}
-      <!-- <button type="submit" class="btn btn-danger">Delete</button> -->
     <button id="favorite-button">Favorite</button>
+    {% if request.user == post.user %}
+    <form action="{% url 'delete_folder' post.pk %}" method="POST">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">Delete</button>
+   {%endif%}
     </form>
   </div>
 </article>
