--- a/FiShare/root/templates/root/subfolder.html
+++ b/FiShare/root/templates/root/subfolder.html
@@ -34,6 +34,13 @@
         >{{post.name}}</a
       >
     </h1>
+
+    {% if request.user == post.user %}
+    <form action="{% url 'delete_folder' post.pk %}" method="POST">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">Delete</button>
+   {%endif%}
+   
     <a href="{% url 'download_folder' post.id %}" class="btn btn-primary"
     >Download</a>
 
