--- a/FiShare/root/templates/root/home.html
+++ b/FiShare/root/templates/root/home.html
@@ -1,79 +1,11 @@
-{% extends "root/base.html" %} {% load crispy_forms_tags %} {% block content %}
+{% extends "root/home_base.html" %} 
 
-  <section class="py-5 my-5">
-    <div class="container">
-      <h1 class="mb-5">My Profile</h1>
-      <div class="bg-white shadow rounded-lg d-block d-sm-flex">
-        <div class="profile-tab-nav border-right">
-          <div class="p-4">
-            <div class="img-circle text-center mb-3">
-              <img src="{{user.profile.image.url}}" alt="Image" class="shadow" />
-            </div>
-            <h4 class="text-center">{{ user.username }}</h4>
-            <form method="POST" enctype="multipart/form-data">
-              {% csrf_token %}
-              <fieldset class="form-group">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label for="id_image" class="btn btn-outline-info">
-                        Choose Profile
-                        <input type="file" name="image" accept="image/*" style="display: none;" id="id_image">
-                      </label>
-                    </div>
-                  </div>
-                </div>
-              </fieldset>
-              <div class="form-group">
-                <p>
-                  
-                </p>
-                <button class="btn btn-primary" type="submit">Update</button>
-              </div>
-            </form>
-            
-    
-          </div>
-        </div>
-        <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
-          <div
-            class="tab-pane fade show active"
-            id="account"
-            role="tabpanel"
-            aria-labelledby="account-tab"
-          >
-            <h3 class="mb-4">Account Info</h3>
-            <form method="POST" enctype="multipart/form-data">
-              <input type="hidden" name="csrfmiddlewaretoken" value="IWu97SCSsyQuSeLqNbmoNysPTNTFX1OribsLJ8T7qBnv0KQEScbKE6CikabCRBzF">
-              <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Edit Changes</legend>
-                <div class="row">
-                  <div class="col-md-6">
-                    
+{% block favourite%}
+<h2>Create Folder</h2>
+<a href="{% url 'create_folder' %}" class="btn btn-primary">Create</a>
 
-<div id="div_id_username" class="form-group"> <label for="id_username" class=" requiredField">
-                Username </label> <div> <input type="text" name="username" value="{{user.username}}" maxlength="150" class="textinput form-control custom-width " required="" id="id_username"> 
-                 </div> </div> 
-                 <div id="div_id_email" class="form-group"> <label for="id_email" class=" requiredField">
-                Email </label> 
-                <div> <input type="email" name="email" value="{{user.email}}" class="emailinput form-control custom-width " required="" id="id_email"> 
-                </div> </div>
-                  </div>
-                </div>
-              </fieldset>
-              <div class="form-group">
-                <p>
+<h2>Upload File</h2>
+<a href="{% url 'all_files_create' %}" class="btn btn-primary">Upload</a>
 
-                </p>
-                <button class="btn btn-primary" type="submit">Update</button>
-              </div>
-            </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  
-</div>
-{% endblock content %}
+{% endblock favourite%}
+
