--- a/FiShare/root/static/root/home.css
+++ b/FiShare/root/static/root/home.css
@@ -110,16 +110,241 @@ body {
   }
   
 
-  /* favourite button css */
-  #favorite-button {
-    background-color: blue;
-    color: white;
-    padding: 10px 20px;
+  /* favorite button css */
+  .favpurple{
+    background-color: #FFD700;
     border: none;
+  }
+  .favblue{
+    background-color: #45bbff;
+  }
+  /* .favorite-button {
+    color: white;
+    padding: 7px 20px;
+    border: none;
+    cursor: pointer;
+    margin: 5px 1px
+  } */
+  .download_button{
+    background-color: #77ff80;
+    border: none;
+  }
+  .favorite-button.clicked {
+    background-color: #FFD700
+    ;
+  }
+
+  
+
+
+  /* folders and files*/
+
+  .file-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-bottom: 30px;
+  }
+  
+  .folder-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  
+  .section-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .section-line {
+    border: none;
+    border-top: 2px solid #333;
+    margin-bottom: 20px;
+  }
+
+  .action-buttons {
+    position: fixed;
+    float: right;
+    top: 0;
+    right: 0;
+    display: flex;
+    gap: 10px;
+    margin: 48px;
+    z-index: 9999; /* Ensure the buttons appear above other content */
+  }
+
+  .article-metadata {
+    margin-top: 0px;
+    font-size: 14px;
+    color: #999;
+  }
+
+  /* button */
+
+  .square-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px; /* Adjust the width to match the desired size */
+    height: 40px; /* Adjust the height to match the desired size */
+    padding: 0;
+  }
+  
+  .button-row {
+    display: flex;
+    gap: 10px;
+  }
+
+  /* dropdown */
+
+
+  a.button {
+    /* Frame */
+    display: inline-block;
+    padding: 20px 28px;
+    border-radius: 50px;
+    box-sizing: border-box;
+    
+    /* Style */
+    border: none;
+    background: var(--button-background);
+    color: var(--button-color);
+    font-size: 24px;
     cursor: pointer;
   }
   
-  #favorite-button.clicked {
-    background-color: purple;
+  a.button:active {
+    filter: brightness(75%);
   }
+  
+  /* Dropdown styles */
+
+
+
+
+  
+
+  .dropdown {
+    position: relative;
+    padding: 0;
+    margin-right: 1em;
+    
+    border: none;
+  }
+  
+  .dropdown summary {
+    list-style: none;
+    list-style-type: none;
+  }
+  
+  .dropdown > summary::-webkit-details-marker {
+    display: none;
+  }
+  
+  .dropdown summary:focus {
+    outline: none;
+  }
+  
+  .dropdown summary:focus a.button {
+    border: 2px solid rgb(117, 207, 255);
+  }
+  
+  .dropdown summary:focus {
+    outline: none;
+  }
+  
+  .dropdown ul {
+    position: absolute;
+    margin: 20px 0 0 0;
+    padding: 20px 0;
+    width: var(--dropdown-width);
+    left: 50%;
+    margin-left: calc((var(--dropdown-width) / 2)  * -1);
+    box-sizing: border-box;
+    z-index: 2;
+    
+    background: var(--dropdown-background);
+    border-radius: 6px;
+    list-style: none;
+  }
+  
+  .dropdown ul li {
+    padding: 0;
+    margin: 0;
+  }
+  
+  .dropdown ul li a:link, .dropdown ul li a:visited {
+    display: inline-block;
+    padding: 10px 0.8rem;
+    width: 100%;
+    box-sizing: border-box;
+    
+    color: var(--dropdown-color);
+    text-decoration: none;
+  }
+  
+  .dropdown ul li a:hover {
+    background-color: var(--dropdown-highlight);
+    color: var(--dropdown-background);
+  }
+  
+  /* Dropdown triangle */
+  .dropdown ul::before {
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: -10px;
+    left: 50%;
+    margin-left: -10px;
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent transparent var(--dropdown-background) transparent;
+  }
+  
+  
+  /* Close the dropdown with outside clicks */
+  .dropdown > summary::before {
+    display: none;
+  }
+  
+  .dropdown[open] > summary::before {
+      content: ' ';
+      display: block;
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      z-index: 1;
+  }
+  
+
+  /* form */
+
+  .formcontainer {
+    margin-top: 50px;
+  }
+  
+  .card {
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card-header {
+    background-color: #f8f9fa;
+    padding: 10px 20px;
+    border-bottom: 1px solid #dee2e6;
+  }
+  
+  .card-title {
+    margin-bottom: 0;
+  }
+  
+  .card-body {
+    padding: 20px;
+  }
+  
   
