--- a/FiShare/users/templates/users/login.html
+++ b/FiShare/users/templates/users/login.html
@@ -38,11 +38,10 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             	{% if user.is_authenticated %}
-            	 <a class="{% url 'logout'%}" href="#">Logout</a>
-            	 <a class="{% url 'profile'%}" href="#">Profile</a>
+            	 <a class="" href="{% url 'logout'%}">Logout</a>
+            	 <a class="" href="{% url 'profile'%}">Profile</a>
             	{%else%} 
-	              <a class="{% url 'login'%}" href="#">Login</a>
-	              <a class="{% url 'register'%}" href="#">Register</a>
+	              <a class="" href="{% url 'register'%}">Register</a>
 	            {%endif%}  
             </div>
           </div>
