--- a/FiShare/users/templates/users/register.html
+++ b/FiShare/users/templates/users/register.html
@@ -33,16 +33,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="#">Home</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             	{% if user.is_authenticated %}
-            	 <a class="nav-item nav-link" href="#">Logout</a>
+            	 <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
             	 <a class="nav-item nav-link" href="#">Profile</a>
             	{%else%} 
-	              <a class="nav-item nav-link" href="#">Login</a>
-	              <a class="nav-item nav-link" href="#">Register</a>
+	              <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
 	            {%endif%}  
             </div>
           </div>
