--- a/FiShare/root/static/root/home.css
+++ b/FiShare/root/static/root/home.css
@@ -85,6 +85,19 @@ body {
     padding: 10px;
     width: 300px;
   }
+
+
+  .user-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .usercard {
+    width: 300px;
+    margin-bottom: 20px;
+  }
+  
   
   .account-img {
     height: 200px;
